Outliner doesn't update text data-block list and crashes on unlinking text #69610

Closed
opened 2019-09-07 09:43:07 +02:00 by Chris Tabron · 6 comments

Blender Version
Broken: version: 2.81 (sub 8), branch: master, commit date: 2019-09-06 22:44, hash: ed779333bb

Short description of error
After setting up my workspace layout for text editing, I set the outliner's display mode to "Blender File" and the filter ID type to "Text". And when I add an empty text data-block in the text editor, the list of text data-blocks in the outliner doesn't update instantly unless you hover anywhere on it's header. And when I tried to unlink the text data-block, it just crashes instantly.

Exact steps for others to reproduce the error
2019-09-07 02-51-52.flv

  1. In the outliner, set the display mode to "Blender file".
  2. Set the filter I.D. type to "Text".
  3. Click on the "New" button in the header of the text editor to open an empty text block.
  4. Hover over any part of the outliner's header.
  5. Click on the "Unlink" button to unlink the empty text block. [on the Text Editor header]
    Outliner text filter not updating list instantly and text file unlink crash.blend
**Blender Version** Broken: version: 2.81 (sub 8), branch: master, commit date: 2019-09-06 22:44, hash: `ed779333bb` **Short description of error** After setting up my workspace layout for text editing, I set the outliner's display mode to "Blender File" and the filter ID type to "Text". And when I add an empty text data-block in the text editor, the list of text data-blocks in the outliner doesn't update instantly unless you hover anywhere on it's header. And when I tried to unlink the text data-block, it just crashes instantly. **Exact steps for others to reproduce the error** [2019-09-07 02-51-52.flv](https://archive.blender.org/developer/F7721421/2019-09-07_02-51-52.flv) 1. In the outliner, set the display mode to "Blender file". 2. Set the filter I.D. type to "Text". 3. Click on the "New" button in the header of the text editor to open an empty text block. 4. Hover over any part of the outliner's header. 5. Click on the "Unlink" button to unlink the empty text block. [on the Text Editor header] [Outliner text filter not updating list instantly and text file unlink crash.blend](https://archive.blender.org/developer/F7721432/Outliner_text_filter_not_updating_list_instantly_and_text_file_unlink_crash.blend)
Author

Added subscriber: @tetrapixel

Added subscriber: @tetrapixel
Chris Tabron changed title from Outliner list doesn't update text data-block list and crashes instantly after unlinking blank text data-block to Outliner doesn't update text data-block list and crashes instantly after unlinking blank text data-block 2019-09-07 09:44:56 +02:00

Added subscribers: @natecraddock, @dfelinto

Added subscribers: @natecraddock, @dfelinto

Confirmed. It should be a straightforward fix, and in a way it is the same solution for both:

  • A notifier/message when creating the text ID.
  • Tag outliner to redraw/free when deleting the text ID.

For the records the crash is:

//source/blender/editors/space_outliner/outliner_draw.c:3101
3101        if (ELEM(tselem->type, 0, TSE_LAYER_COLLECTION) && ID_IS_LINKED(tselem->id)) {

@Zachman can I interest you into looking at this?

Confirmed. It should be a straightforward fix, and in a way it is the same solution for both: * A notifier/message when creating the text ID. * Tag outliner to redraw/free when deleting the text ID. For the records the crash is: ``` //source/blender/editors/space_outliner/outliner_draw.c:3101 3101 if (ELEM(tselem->type, 0, TSE_LAYER_COLLECTION) && ID_IS_LINKED(tselem->id)) { ``` @Zachman can I interest you into looking at this?
Dalai Felinto changed title from Outliner doesn't update text data-block list and crashes instantly after unlinking blank text data-block to Outliner doesn't update text data-block list and crashes on unlinking text 2019-09-18 02:23:01 +02:00
Nathan Craddock self-assigned this 2019-09-18 02:45:55 +02:00

Yes, I will take a look.

Yes, I will take a look.

This issue was referenced by 2480c9236f

This issue was referenced by 2480c9236fd43907b81053616b23c155970a9cca

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69610
No description provided.