Fix T69610: Outliner doesn't update for text new and unlink

Redraw the outliner when text data-blocks are created and unlinked. This
also fixes a crash when unlinking.